Genericise NoVA branded pieces, add readme, put in TO DO's

--- a/Angular/src/app/now-showing/now-showing.component.html
+++ b/Angular/src/app/now-showing/now-showing.component.html
@@ -21,7 +21,7 @@
       </div>
 
       <app-small-speaker [session]="sessionsByRoom[room.id]"></app-small-speaker>
-      <a target="_blank" [href]="getPlayUrl(room)"><i class="fa fa-play m-2"></i> Watch Now</a>
+      <a *ngIf="getPlayUrl(room)" target="_blank" [href]="getPlayUrl(room)"><i class="fa fa-play m-2"></i> Watch Now</a>
     </div>
   </div>
 </div>
